--- a/Rifattorizzazioni/(Ri)Fattorizzazioni.ipynb
+++ b/Rifattorizzazioni/(Ri)Fattorizzazioni.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scrivi una funzione `cerca` che dica se una parola è present in un testo."
+    "Scrivi una funzione `cerca` che dica se una parola è presente in un testo."
    ]
   },
   {
